--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "myscripts",
-  "version": "1.0.2",
+  "name": "jabtap-autoclicker",
+  "version": "1.0.4",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
